# vinculacionunl

./: .gitignore  LICENSE  README.md  docker-compose.yml
API_EFD/: .gitignore  Dockerfile  endpoints_documentacion.txt  pyproject.toml  requirements.txt
API_EFD/app/: main.py
API_EFD/app/config/: database.py
API_EFD/app/controllers/: administrador_controller.py  cuenta_controller.py  escuela_controller.py  participante_controller.py  persona_controller.py  representante_controller.py  rol_controller.py
API_EFD/app/core/: get_db.py  security.py
API_EFD/app/models/: administrador.py  base_model_orm.py  cuenta.py  enums.py  escuela.py  inscripciones.py  participante.py  persona.py  representante.py  rol.py
API_EFD/app/schemas/: administrador_schema.py  cuenta_schema.py  escuela_schema.py  participante_schema.py  persona_schema.py  representante_schema.py  response_schema.py  rol_schema.py
API_EFD/app/services/: administrador_service.py  cuenta_service.py  escuela_service.py  participante_service.py  persona_service.py  representante_service.py  rol_service.py
API_EFD/app/utils/: captcha.py  email_sender.py  utils.py
APP_EFD/: .env  .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
APP_EFD/documents/: ASENTIMIENTO PARA NIÑOS.docx  CONSENTIMIENTO INFORMADO.docx  FLUJOGRAMA DE INSCRIPCIÓN.docx  Política de Cookies.docx
APP_EFD/src/: App.tsx  index.css
APP_EFD/src/api/: access.tsx
APP_EFD/src/components/: CookieBanner.tsx  PrivateRoute.tsx  (+4 more)
vinculaunl/: pyvenv.cfg
vinculaunl/Scripts/: activate  activate.bat
(+26 files in other folders)
