[project]
name = "EFD"
version = "0.1.0"

dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "psycopg2-binary",
    "python-dotenv"
]

[tool.setuptools.packages.find]
include = ["app"]

[project.scripts]
start = "app.main:run"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"